parser funcional (version inicial)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,9 @@ name = "tokens"
 path = "src/tokens.rs"
 
 [[bin]]
+name = "parse"
+path = "src/parse.rs"
+
+[[bin]]
 name = "main"
 path = "src/main.rs"
