Commit por el error fantasma
Commit por el error fantasma

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "Compilador_Rust"
 version = "0.1.0"
 edition = "2021"
-default-run = "main"
+default-run = "parse"
 
 [dependencies]
 regex = "1.11.0"
